<resources>
    <string name="app_name">MyMotoTracker</string>
    <string name="intro_text">Zum Beenden nach rechts swipen.</string>
    <string name="map_not_ready">Karte (noch) nicht verfügbar.</string>
    <string name="location_information">Location information</string>
    <string name="textAcceleration">0</string>
    <string name="timetracking">00:00:00</string>
    <string name="textAcceleration3D">0 m/s^2\n0 m/s^2\n0 m/s^2\n0 m/s^2</string>
    <string name="textAccuracy">0 m</string>
    <string name="textCurrentAngle">0°</string>
    <string name="tracking_status">Tracking status</string>
    <string name="textDBEntries">0 waypoints</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="tracking">Tracking</string>
    <string name="tracking_off">Tracking OFF</string>
    <string name="tracking_on">Tracking ON</string>
    <string name="textCurrentSpeed">0</string>
    <string name="textAverageSpeed">0</string>
    <string name="textMaxSpeed">0</string>
    <string name="textLeftAngle">0°</string>
    <string name="textRightAngle">0°</string>
    <string name="load_waypoints">Load Waypoints</string>
    <string name="textviewWayPointInfos">Lat, Lon, km/h, 0°</string>
    <string name="save_trip">Save Trip</string>
    <string name="show_tracks">Show Tracks</string>
    <string name="default_channel">Default channel</string>
    <plurals name="num_locations_reported">
        <item quantity="zero">No location reported</item>
        <item quantity="one">One location reported</item>
        <item quantity="other">%d locations reported</item>
    </plurals>
    <string name="unknown_location">Unknown location</string>
</resources>
